address wrapping issue on long pf results in detail view

--- a/src/features/ResultItem/components/ResultDetailView/ResultDetailView.module.scss
+++ b/src/features/ResultItem/components/ResultDetailView/ResultDetailView.module.scss
@@ -40,6 +40,7 @@
   display: flex;
   align-items: flex-start;
   gap: $xxs;
+  flex-wrap: wrap;
 }
 
 .nameRow {
